update polish translation

--- a/locale/pl/LC_MESSAGES/django.po
+++ b/locale/pl/LC_MESSAGES/django.po
@@ -412,7 +412,7 @@ msgstr "Wskaż fakultet studiów"
 
 #: .\presurvey\models.py:86
 msgid "Did you vote in the last election for the student council?"
-msgstr "Czy głosowałeś w ostatnich wyborach do Rady Studenckiej"
+msgstr "Czy głosowałeś w ostatnich wyborach do Parlamentu Studenckiego"
 
 #: .\presurvey\models.py:91
 msgid "What is your gender?"
@@ -491,8 +491,8 @@ msgstr ""
 "\n"
 "        Dziś zapraszamy Ciebie do wzięcia udziału w eksperymencie ekonomicznym. Ten "
 "eksperyment jest częścią badania naukowego, projektu\n"
-"        prowadzonego przez studentów Szkoły Doktroskiej Uniwersytetu Ekonomicznego  "
-"w Poznaniu . W sumie,\n"
+"        prowadzonego przez studentów Szkoły Doktorskiej Uniwersytetu Ekonomicznego  "
+"w Poznaniu. W sumie\n"
 "        w badaniu będzie uczestniczyć 500-600 studentów. Wszystkie sesje "
 "będą miały miejsce w marcu 2023.<br>\n"
 "\n"
@@ -500,9 +500,9 @@ msgstr ""
 "<br>\n"
 "\n"
 "        Ten eksperyment zajmie około <b>20 minut</b>.<br>\n"
-"        Każdy uczestnik biorący udział w ekperymencie i odpowie na wszystkie pytania otrzyma "
-"wynagrodzenie <b>za udział w eksperymencie w wysokości 5 zł.</b><br>\n"
-"        Ponadto istnieje <b>szansa, by zarobić 5 zł. dodatkowo</b> "
+"        Każdy uczestnik biorący udział w eksperymencie i odpowie na wszystkie pytania otrzyma "
+"wynagrodzenie <b>w wysokości 5 zł.</b><br>\n"
+"        Ponadto istnieje <b>szansa, aby zarobić 5 zł. dodatkowo</b> "
 "podczas eksperymentu.<br>\n"
 "        Wynik tego eksperymentu ma realny wpływ na warunki studiowania "
 "na Uniwersytecie \n"
@@ -523,7 +523,7 @@ msgid ""
 "    "
 msgstr ""
 "\n"
-"        Prosimy o wprowadzenie swojego numeru identyfikacyjnego z kartki, którą otrzymałeś od nas"
+"        Prosimy o wprowadzenie swojego numeru identyfikacyjnego z kartki, którą otrzymałeś od nas. "
 "To Twój unikalny numer identyfikacyjny.\n"
 "    "
 #: .\presurvey\templates\presurvey\bIdRequest.html:17
@@ -542,7 +542,7 @@ msgstr ""
 "wynagrodzenie za udział w eksperymencie.<br><br>\n"
 "        Jest ona po to, by zagwarantować anonimowość. Nie zapytamy o Twoje dane osobowe "
 "tj. imię i nazwisko, ani żadne inne\n"
-"        informacje, które mogłyby umożliwić połączenie Twojego zachowania w tym"
+"        informacje, które mogłyby umożliwić połączenie Twojego zachowania w tym "
 "eksperymencie z Twoją prawdziwą tożsamością.\n"
 "    "
 #: .\presurvey\templates\presurvey\cPanas.html:6
@@ -603,7 +603,7 @@ msgstr ""
 "    (II)    Dostęp do kolekcji ważnych standardowych podręczników w formie e-booków "
 "dostępnych dla wszystkich\n"
 "            studentów po zalogowaniu do uniwersyteckiego WiFi. <br><br>\n"
-"    (III)   \tSzereg stypendiów (600-800 zł na studenta) na studia"
+"    (III)   \tSzereg stypendiów (600-800 zł na studenta) na studia "
 "lub praktyki.\n"
 "            zagraniczne poza programami finansowanymi"
 "<br><br>\n"
@@ -637,15 +637,15 @@ msgid ""
 "    "
 msgstr ""
 "\n"
-"        1.	Filozof Immanuel Kant (1724-1804) zaproponował znany"
+"        1.	Filozof Immanuel Kant (1724-1804) zaproponował znany "
 "imperatyw kategoryczny: An\n"
 "        Jednostka powinna  <i>“[…] postępować tylko według takiej zasady, którą może "
 "jednocześnie chcieć uczynić \n"
-"        prawem powszechnym.”</i> (Kant, 1907: 88),co oznacza, że"
+"        prawem powszechnym.”</i> (Kant, 1907: 88), co oznacza, że "
 "jednostka powinna zachowywać się w określony sposób tylko jeśli \n"
-"        życzysz sobie, aby wszyscy inni zachowywali się również w ten sposób. <br>\n"
+"        życzy sobie, aby wszyscy inni zachowywali się również w ten sposób. <br>\n"
 "\n"
-"        <br><b>Co o tym sądzisz? W jakim stopniu należy kierować się tą wskazówką ? "
+"        <br><b>Co o tym sądzisz? W jakim stopniu należy kierować się tą wskazówką "
 "przy podejmowaniu decyzji \n"
 "        w życiu codziennym?</b>\n"
 "    "
@@ -672,7 +672,7 @@ msgstr "Brak zaufania"
 
 #: .\presurvey\templates\presurvey\fAttitudes.html:50
 msgid "Little Trust"
-msgstr "małe zaufanie"
+msgstr "Małe zaufanie"
 
 #: .\presurvey\templates\presurvey\fAttitudes.html:51
 msgid "Much Trust"
@@ -789,8 +789,7 @@ msgstr ""
 "wsparcia ich działalności,\n"
 "                tj, konferencje i publikacje. </li><br>\n"
 "        </ul>\n"
-"        Pytanie brzmi następująco: <b> Na który z powyższych celów powinny być wydane 10-15 zł. przypadające na każdego studenta? "
-"on?</b><br><br>\n"
+"        Pytanie brzmi następująco: <b> Na który z powyższych celów powinny być wydane 10-15 zł. przypadające na każdego studenta?</b><br><br>\n"
 "\n"
 "        Wszystkich uczestników dzisiejszych eksperymentów podzieliliśmy losowo na "
 "trzy grupy równej wielkości. <br>\n"
