delete council treatment group

--- a/locale/pl/LC_MESSAGES/django.po
+++ b/locale/pl/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-01-18 09:55+0100\n"
+"POT-Creation-Date: 2023-01-20 20:35+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -29,49 +29,72 @@ msgid "No"
 msgstr "Nie"
 
 #: .\mindgame\models.py:56
+#, fuzzy
+#| msgid ""
+#| "0 correct predictions - your contribution is 15 Zloty, you earn extra 0 "
+#| "Zloty ( + your show-up fee)"
 msgid ""
-"0 correct predictions - your contribution is 15 Zloty, you earn extra 0 "
-"Zloty ( + your show-up fee)"
+"0 correct predictions - your contribution is 15 Zloty, you earn extra 0 Zloty"
 msgstr ""
 "0 poprawnych przewidywań - Twój wkład to 15 zł., zarabiasz dodatkowo 0 zł. "
 "( + Twoja opłata za uczestnictwo)"
 
 #: .\mindgame\models.py:57
+#, fuzzy
+#| msgid ""
+#| "1 correct predictions - your contribution is 14 Zloty , you earn extra 1 "
+#| "Zloty (+ your show-up fee)"
 msgid ""
 "1 correct predictions - your contribution is 14 Zloty , you earn extra 1 "
-"Zloty (+ your show-up fee)"
+"Zloty"
 msgstr ""
 "1 poprawne przewidywanie - Twój wkład to 14 zł., zarabiasza dodatkowo 1 zł. "
 "(+ Twoja opłata za uczestnictwo)"
 
 #: .\mindgame\models.py:58
+#, fuzzy
+#| msgid ""
+#| "2 correct predictions - your contribution is 13 Zloty , you earn extra 2 "
+#| "Zloty (+ your show-up fee)"
 msgid ""
 "2 correct predictions - your contribution is 13 Zloty , you earn extra 2 "
-"Zloty (+ your show-up fee)"
+"Zloty"
 msgstr ""
 "2 poprawne przewidywania - Twój wkład to 13 zł., zarabiasza dodatkowo 2 zł. "
 "(+ Twoja opłata za uczestnictwo)"
 
 #: .\mindgame\models.py:59
+#, fuzzy
+#| msgid ""
+#| "3 correct predictions - your contribution is 12 Zloty , you earn extra 3 "
+#| "Zloty (+ your show-up fee)"
 msgid ""
 "3 correct predictions - your contribution is 12 Zloty , you earn extra 3 "
-"Zloty (+ your show-up fee)"
+"Zloty"
 msgstr ""
 "3 poprawne przewidywania - Twój wkład to 12 zł., zarabiasza dodatkowo 3 zł. "
 "(+ Twoja opłata za uczestnictwo)"
 
 #: .\mindgame\models.py:60
+#, fuzzy
+#| msgid ""
+#| "4 correct predictions - your contribution is 11 Zloty , you earn extra 4 "
+#| "Zloty (+ your show-up fee)"
 msgid ""
 "4 correct predictions - your contribution is 11 Zloty , you earn extra 4 "
-"Zloty (+ your show-up fee)"
+"Zloty"
 msgstr ""
 "4 poprawne przewidywania - Twój wkład to 11 zł., zarabiasza dodatkowo 4 zł. "
 "(+ Twoja opłata za uczestnictwo)"
 
 #: .\mindgame\models.py:61
+#, fuzzy
+#| msgid ""
+#| "5 correct predictions - your contribution is 10 Zloty , you earn extra 5 "
+#| "Zloty (+ your show-up fee)"
 msgid ""
 "5 correct predictions - your contribution is 10 Zloty , you earn extra 5 "
-"Zloty (+ your show-up fee)"
+"Zloty"
 msgstr ""
 "5 poprawnych przewidywań - Twój wkład to 10 zł., zarabiasza dodatkowo 5 zł. "
 "(+ Twoja opłata za uczestnictwo)"
@@ -582,30 +605,55 @@ msgid "Hypothetical exercise"
 msgstr "Ćwiczenie hipotetyczne"
 
 #: .\presurvey\templates\presurvey\dHypoEx1.html:10
-#, python-format
+#, fuzzy, python-format
+#| msgid ""
+#| "\n"
+#| "        Assume that the university provided every student at Poznan "
+#| "University of Economics and Business with 15 Zloty.\n"
+#| "        This money is earmarked for improving study conditions at this "
+#| "university.\n"
+#| "        It can be spent on the following options:<br>\n"
+#| "    <br>\n"
+#| "    (I)     A series of presentations by well-known entrepreneurs, among "
+#| "them Marek Zmysłowski,\n"
+#| "            Polish-born entrepreneur and co-founder of Rocket Internet, "
+#| "RTB House, OLX and GLOVO and author of\n"
+#| "            the bestseller \"Chasing Black Unicorns.\"<br><br>\n"
+#| "    (II)    Access to a collection of important standard textbooks as "
+#| "ebooks accessible to all\n"
+#| "            students when logged in to the university WiFi. <br><br>\n"
+#| "    (III)   A number of scholarships (600-800 Zloty per student) for "
+#| "study abroad or internship\n"
+#| "            abroad outside of funded programs (so-called free mover)."
+#| "<br><br>\n"
+#| "    (IV)\tFinancial support of selected Study Circles to support their "
+#| "activities,\n"
+#| "            among others publications and conferences. <br><br>\n"
+#| "\n"
+#| "<br><b>How should this money be distributed (in percentage?)</b><br>\n"
+#| "\n"
+#| "    <br>Please note that your answer is purely hypothetical. It does not "
+#| "have any real-life consequences.<br>\n"
+#| "\n"
+#| "    <br>Please make sure that all of the options below add up to 100.\n"
+#| "You only need to fill in the number <b>without</b> the percentage sign "
+#| "\"%%\".\n"
+#| "    "
 msgid ""
 "\n"
-"        Assume that the university provided every student at Poznan "
-"University of Economics and Business with 15 Zloty.\n"
+"        Assume that the university provided every student at PUEB with 15 "
+"Zloty.\n"
 "        This money is earmarked for improving study conditions at this "
 "university.\n"
 "        It can be spent on the following options:<br>\n"
 "    <br>\n"
-"    (I)     A series of presentations by well-known entrepreneurs, among "
-"them Marek Zmysłowski,\n"
-"            Polish-born entrepreneur and co-founder of Rocket Internet, RTB "
-"House, OLX and GLOVO and author of\n"
-"            the bestseller \"Chasing Black Unicorns.\"<br><br>\n"
-"    (II)    Access to a collection of important standard textbooks as ebooks "
-"accessible to all\n"
-"            students when logged in to the university WiFi. <br><br>\n"
-"    (III)   A number of scholarships (600-800 Zloty per student) for study "
-"abroad or internship\n"
-"            abroad outside of funded programs (so-called free mover)."
-"<br><br>\n"
-"    (IV)\tFinancial support of selected Study Circles to support their "
-"activities,\n"
-"            among others publications and conferences. <br><br>\n"
+"    (I)     A series of presentations by well-known Polish-born "
+"entrepreneurs<br><br>\n"
+"    (II)    Online access to important standard textbooks as ebooks via "
+"university WiFi. <br><br>\n"
+"    (III)   Scholarships (600-800 Zloty per student) for study or "
+"internships abroad.<br><br>\n"
+"    (IV)\tFinancial support for Study Circles at PUEB. <br><br>\n"
 "\n"
 "<br><b>How should this money be distributed (in percentage?)</b><br>\n"
 "\n"
@@ -716,35 +764,43 @@ msgid "Very Much Trust"
 msgstr "Bardzo duże zaufanie"
 
 #: .\votingGame\models.py:26
+#, fuzzy
+#| msgid ""
+#| "A presentation by Marek Zmysłowski, Polish-born entrepreneur and co-"
+#| "founder of Rocket Internet, RTB House, OLX and GLOVO and author of the "
+#| "bestseller \"Chasing Black Unicorns\"."
 msgid ""
 "A presentation by Marek Zmysłowski, Polish-born entrepreneur and co-founder "
-"of Rocket Internet, RTB House, OLX and GLOVO and author of the bestseller "
-"\"Chasing Black Unicorns\"."
+"of Rocket Internet, RTB House, OLX and GLOVO."
 msgstr ""
 "Seria prezentacji znanych przedsiębiorców, wśród nich polski przedsiębiorca "
 "Marek Zmysłowski,założyciel Rocket Internet, RTB House, OLX oraz GLOVO i "
 "autor bestsellera \"Goniąc czarne jednorożce\"."
 
 #: .\votingGame\models.py:27
-msgid ""
-"Access to a collection of important standard textbooks as ebooks accessible "
-"to all students when logged in to the university WiFi."
+msgid "Online access to important standard textbooks via university WiFi."
 msgstr ""
-"Dostęp do kolekcji ważnych standardowych podręczników w formie e-booków "
-"dostępnych dla wszystkich studentów po zalogowaniu do uniwersyteckiego WiFi."
 
 #: .\votingGame\models.py:28
+#, fuzzy
+#| msgid ""
+#| "A number of scholarships (600-800 Zloty per student) for study abroad or "
+#| "internship abroad outside of funded programs (so-called free mover)."
 msgid ""
-"A number of scholarships (600-800 Zloty per student) for study abroad or "
-"internship abroad outside of funded programs (so-called free mover)."
+"Scholarships (600-800 Zloty per student) for study or internship abroad "
+"outside of funded programs."
 msgstr ""
 "Szereg stypendiów (600-800 zł. na studenta) na studia lub praktyki "
 "zagraniczne poza programami finansowanymi."
 
 #: .\votingGame\models.py:29
+#, fuzzy
+#| msgid ""
+#| "Financial support of selected Study Circles to support their activities, "
+#| "among others publications and conferences."
 msgid ""
-"Financial support of selected Study Circles to support their activities, "
-"among others publications and conferences."
+"Financial support of selected Study Circles (e.g. for publications or "
+"conferences)."
 msgstr ""
 "Wsparcie finansowe wybranych kół naukowych w celu wsparcia ich działalności, "
 "m.in.  publikacji i konferencji. "
@@ -773,33 +829,62 @@ msgid "Introduction"
 msgstr "Wstęp"
 
 #: .\votingGame\templates\votingGame\aIntro.html:10
+#, fuzzy
+#| msgid ""
+#| "\n"
+#| "        <b>For every participant</b> of today’s experiment, there are "
+#| "10-15 Zloty from public sources.\n"
+#| "        This money is earmarked for improving study conditions at the "
+#| "Poznan University of Economics and Business.\n"
+#| "        It can be spent on the following options:<br><br>\n"
+#| "        <ul>\n"
+#| "            <li> A presentation by Marek Zmysłowski, Polish-born "
+#| "entrepreneur and co-founder of Rocket Internet,\n"
+#| "                RTB House, OLX and GLOVO and author of the bestseller "
+#| "\"Chasing Black Unicorns.\" </li><br>\n"
+#| "            <li> Access to a collection of important standard textbooks "
+#| "as ebooks accessible to all students\n"
+#| "                when logged in to the university WiFi.  </li><br>\n"
+#| "            <li> A number of scholarships (600-800 Zloty per student) for "
+#| "study abroad or internship abroad outside\n"
+#| "                of funded programs (so-called free mover). </li><br>\n"
+#| "            <li> Financial support of selected Study Circles to support "
+#| "their activities,\n"
+#| "                among others publications and conferences. </li><br>\n"
+#| "        </ul>\n"
+#| "        The question is: <b>What should the 10-15 Zloty per student be "
+#| "spent on?</b><br><br>\n"
+#| "\n"
+#| "        We randomly divided all participants in today’s experiments into "
+#| "three groups of about equal size. <br>\n"
+#| "        <b>Please do not communicate with each other when answering the "
+#| "upcoming questions.</b><br>\n"
+#| "        If you have problem, please raise your hand so the experimenter "
+#| "can help you.<br>\n"
+#| "\n"
+#| "    "
 msgid ""
 "\n"
 "        <b>For every participant</b> of today’s experiment, there are 10-15 "
 "Zloty from public sources.\n"
-"        This money is earmarked for improving study conditions at the Poznan "
-"University of Economics and Business.\n"
+"        This money is earmarked for improving study conditions at the PUEB.\n"
 "        It can be spent on the following options:<br><br>\n"
 "        <ul>\n"
 "            <li> A presentation by Marek Zmysłowski, Polish-born "
 "entrepreneur and co-founder of Rocket Internet,\n"
-"                RTB House, OLX and GLOVO and author of the bestseller "
-"\"Chasing Black Unicorns.\" </li><br>\n"
-"            <li> Access to a collection of important standard textbooks as "
-"ebooks accessible to all students\n"
-"                when logged in to the university WiFi.  </li><br>\n"
-"            <li> A number of scholarships (600-800 Zloty per student) for "
-"study abroad or internship abroad outside\n"
-"                of funded programs (so-called free mover). </li><br>\n"
-"            <li> Financial support of selected Study Circles to support "
-"their activities,\n"
-"                among others publications and conferences. </li><br>\n"
+"                RTB House, OLX and GLOVO. </li><br>\n"
+"            <li> Online access to important standard textbooks via "
+"university WiFi. </li><br>\n"
+"            <li> Scholarships (600-800 Zloty per student) for study or "
+"internship abroad outside of funded programs. </li><br>\n"
+"            <li> Financial support of selected Study Circles (e.g. for "
+"publications or conferences). </li><br>\n"
 "        </ul>\n"
 "        The question is: <b>What should the 10-15 Zloty per student be spent "
 "on?</b><br><br>\n"
 "\n"
-"        We randomly divided all participants in today’s experiments into "
-"three groups of about equal size. <br>\n"
+"        We randomly divided all participants in today’s experiments into two "
+"groups of about equal size. <br>\n"
 "        <b>Please do not communicate with each other when answering the "
 "upcoming questions.</b><br>\n"
 "        If you have problem, please raise your hand so the experimenter can "
@@ -1006,36 +1091,67 @@ msgid "President Decision"
 msgstr "Przewodniczący Parlamentu Studenckiego"
 
 #: .\votingGame\templates\votingGame\dTreatmentPresident.html:10
+#, fuzzy
+#| msgid ""
+#| "\n"
+#| "For the 10-15 Zloty per student in your group, we asked <i>Wiktoria "
+#| "Walkowiak</i> <b>the president</b> of the student council\n"
+#| "        at your university to make the decision on what the money is "
+#| "spent.\n"
+#| "        These were the options:<br><br>\n"
+#| "        <ul>\n"
+#| "            <li> A presentation by Marek Zmysłowski, Polish-born "
+#| "entrepreneur and co-founder of Rocket Internet,\n"
+#| "                RTB House, OLX and GLOVO and author of the bestseller "
+#| "\"Chasing Black Unicorns.\" </li><br>\n"
+#| "            <li> Access to a collection of important standard textbooks "
+#| "as ebooks accessible to all students\n"
+#| "                when logged in to the university WiFi.  </li><br>\n"
+#| "            <li> A number of scholarships (600-800 Zloty per student) for "
+#| "study abroad or internship abroad outside\n"
+#| "                of funded programs (so-called free mover). </li><br>\n"
+#| "            <li> Financial support of selected Study Circles to support "
+#| "their activities,\n"
+#| "                among others publications and conferences. </li><br>\n"
+#| "        </ul>\n"
+#| "        <br>The president <i>Wiktoria Walkowiak</i> decided as "
+#| "follows<br>\n"
+#| "        For every member of your group, 10-15 Zloty are spent on the "
+#| "following option:<br><br>\n"
+#| "\n"
+#| "        <b>A number of scholarships (600-800 Zloty per student) for study "
+#| "abroad or internship abroad\n"
+#| "            outside of funded programs (so-called free mover).</b>\n"
+#| "\n"
+#| "\n"
+#| "    "
 msgid ""
 "\n"
-"For the 10-15 Zloty per student in your group, we asked <i>Wiktoria "
+"    For the 10-15 Zloty per student in your group, we asked <i>Wiktoria "
 "Walkowiak</i> <b>the president</b> of the student council\n"
 "        at your university to make the decision on what the money is spent.\n"
 "        These were the options:<br><br>\n"
 "        <ul>\n"
 "            <li> A presentation by Marek Zmysłowski, Polish-born "
 "entrepreneur and co-founder of Rocket Internet,\n"
-"                RTB House, OLX and GLOVO and author of the bestseller "
-"\"Chasing Black Unicorns.\" </li><br>\n"
-"            <li> Access to a collection of important standard textbooks as "
-"ebooks accessible to all students\n"
-"                when logged in to the university WiFi.  </li><br>\n"
-"            <li> A number of scholarships (600-800 Zloty per student) for "
-"study abroad or internship abroad outside\n"
-"                of funded programs (so-called free mover). </li><br>\n"
-"            <li> Financial support of selected Study Circles to support "
-"their activities,\n"
-"                among others publications and conferences. </li><br>\n"
+"                RTB House, OLX and GLOVO. </li><br>\n"
+"            <li> Online access to important standard textbooks via "
+"university WiFi. </li><br>\n"
+"            <li> Scholarships (600-800 Zloty per student) for study or "
+"internship abroad outside of funded programs. </li><br>\n"
+"            <li> Financial support of selected Study Circles (e.g. for "
+"publications or conferences). </li><br>\n"
 "        </ul>\n"
 "        <br>The president <i>Wiktoria Walkowiak</i> decided as follows<br>\n"
 "        For every member of your group, 10-15 Zloty are spent on the "
 "following option:<br><br>\n"
 "\n"
-"        <b>A number of scholarships (600-800 Zloty per student) for study "
-"abroad or internship abroad\n"
-"            outside of funded programs (so-called free mover).</b>\n"
+"        <b>Scholarships (600-800 Zloty per student) for study or internship "
+"abroad outside of funded programs.</b>\n"
 "\n"
-"\n"
+"    Note: <b>The decision now has real-life consequences. For every student "
+"participating in your group,\n"
+"    10-15 Zloty per person will be spent on the option named above.</b>\n"
 "    "
 msgstr ""
 "\n"
@@ -1073,3 +1189,11 @@ msgstr ""
 
 #~ msgid "I would rather not to answer"
 #~ msgstr "Wolę nie odpowiadać"
+
+#~ msgid ""
+#~ "Access to a collection of important standard textbooks as ebooks "
+#~ "accessible to all students when logged in to the university WiFi."
+#~ msgstr ""
+#~ "Dostęp do kolekcji ważnych standardowych podręczników w formie e-booków "
+#~ "dostępnych dla wszystkich studentów po zalogowaniu do uniwersyteckiego "
+#~ "WiFi."
